<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.CoinDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivLogoCoin"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvFromSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_purple"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
            app:layout_constraintEnd_toStartOf="@+id/tvSlash"
            app:layout_constraintTop_toTopOf="@+id/tvSlash"
            tools:text="BTC" />

        <TextView
            android:id="@+id/tvSlash"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:text="@string/slash"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogoCoin" />

        <TextView
            android:id="@+id/tvToSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
            app:layout_constraintStart_toEndOf="@+id/tvSlash"
            app:layout_constraintTop_toTopOf="@+id/tvSlash"
            tools:text="USD" />

        <TextView
            android:id="@+id/tvPriceLabel"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/price_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSlash" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvSlash"
            tools:text="16500.0" />

        <View
            style="@style/CoinDetailsSlashLinesStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

        <TextView
            android:id="@+id/tvMinPriceLabel"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/min_price_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel" />

        <TextView
            android:id="@+id/tvMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            tools:text="15500.0" />

        <View
            style="@style/CoinDetailsSlashLinesStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

        <TextView
            android:id="@+id/tvMaxPriceLabel"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/max_price_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMinPriceLabel" />

        <TextView
            android:id="@+id/tvMaxPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_green_light"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvMinPrice"
            tools:text="17500.0" />

        <View
            style="@style/CoinDetailsSlashLinesStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

        <TextView
            android:id="@+id/tvLastMarketLabel"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/last_market_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMaxPriceLabel" />

        <TextView
            android:id="@+id/tvLastMarket"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvMaxPrice"
            tools:text="Bitfinex" />

        <View
            style="@style/CoinDetailsSlashLinesStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

        <TextView
            android:id="@+id/tvLastUpdateLabel"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/last_update_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastMarketLabel" />

        <TextView
            android:id="@+id/tvLastUpdate"
            style="@style/CoinDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvLastMarket"
            tools:text="00:19:23" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>